# AsignacionAulica

./: .gitignore  README.md  build.ps1  instalador.iss  pyproject.toml
.github/workflows/: build-exe.yml  build-windows.yml  flet-build-windows.yml
assets/plantillas_excel/: .gitignore
plantillas_excel/: README.md  clases.py  estilos.py
src/: main.py
src/asignacion-aulica/: __main__.py
src/asignacion_aulica/: __main__.py  análisis_de_asignaciones.py  assets.py  data_files.py  get_asset_path.py  logging_config.py  main.py
src/asignacion_aulica/GUI/: equipamiento_model.py  list_model.py  main.py  table.py  table_view.py
src/asignacion_aulica/archivos_excel/: __init__.py
src/asignacion_aulica/backend/: __init__.py  constantes.py  dia.py  impossible_assignment_exception.py  lógica_de_asignación.py  preferencias.py  restricciones.py
src/asignacion_aulica/excel/: __init__.py  estilos.py  exportar_clases.py  importar_clases.py  plantilla_clases.py  validadores.py
src/asignacion_aulica/frontend/: Diagrama.drawio  README formato excel.md.txt  UI.py  alertas.py  archivos.py  clases.py  colores.py  config.py  config_actividades.py  config_aulas.py  config_aulas_dobles.py  config_carreras.py  config_edificios.py  config_horarios.py  datos.py  excepciones_universidad.py  funciones_de_traduccion.py  iconos.py  menu.py  universidad.py
src/asignacion_aulica/gestor_de_datos/: __init__.py  aula.py  carrera.py  clase.py  día.py  días_y_horarios.py  edificio.py  entidades.py  enums.py  gestor.py  type_checking.py
src/asignacion_aulica/lógica_de_asignación/: __init__.py  asignación.py  asignar.py  aulas_preprocesadas.py  dia.py  día.py  excepciones.py  impossible_assignment_exception.py  postprocesamiento.py  preferencias.py  preprocesamiento.py  restricciones.py
src/plantillas_excel/: clases.py  estilos.py  pip-requirements.txt  validadores.py
tests/backend/: materias.csv  prueba.py
tests/excel/: generar_plantilla_clases.py
tests/manuales/: ingeniería_en_computación_en_anasagasti_2.py
tests/maunales/: ingeniería_en_computación_en_anasagasti_2.py
tests/pytest/: conftest.py  helper_functions.py  mocks.py  test_análisis_de_asignaciones.py  test_asignaciones_manuales.py  test_integrales.py  test_obtener_penalización.py  test_preferencia_capacidad.py  test_preferencia_capacidad_excedida.py  test_preferencia_capacidad_sobrante.py  test_preferencia_edficio_preferido.py  test_preferencia_edificio_preferido.py  test_restricciones.py
(+163 files in other folders)
