[project]
name = "asignacion-aulica"
description = "Software de asignación de aulas para la UNRN Sede Andina"
version = "0.0.1"

authors = [
  {name = "Cristian Gustavo Mogensen"},
  {name = "Juan Manuel Valenzuela"},
  {name = "Teo Pirato Guthmann"},
  {name = "Joaquín Rodríguez"}
]

requires-python = "~= 3.11"
dependencies = [
  "pandas == 2.2.*",
  "ortools == 9.12.*"
]

[project.optional-dependencies]
tests = [
  "pytest ~= 8.3"
]

[project.scripts] #[project.gui-scripts] cuando haya gui
asignacion-aulica = "asignacion_aulica.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests/pytest"]
minversion = "8.3"
