[project]
name = "asignacion-aulica"
description = "Software de asignación de aulas para la UNRN Sede Andina"
version = "0.1.0"

authors = [
  {name = "Cristian Gustavo Mogensen"},
  {name = "Juan Manuel Valenzuela"},
  {name = "Teo Pirato Guthmann"},
  {name = "Joaquín Rodríguez"}
]

requires-python = "~= 3.11"
dependencies = [
  "pandas == 2.2.*",
  "numpy == 2.2.*",
  "ortools == 9.12.*",
  "pyqt6 == 6.9.*"
]

[project.optional-dependencies]
test = ["pytest == 8.3.*"]
build = ["cx_freeze == 8.4.*"]
excel = ["openpyxl == 3.1.*", "pillow == 11.3.*"]

[project.scripts]
asignacion-aulica = "asignacion_aulica.main:main"

[tool.pytest.ini_options]
testpaths = ["tests/pytest"]
minversion = "8.3"

[tool.cxfreeze]
executables = [
    {script = "src/asignacion_aulica/main.py", base = "gui"}
]

[tool.cxfreeze.build_exe]
build_exe = "build/AsignaciónÁulica"
include_files = "assets,src/asignacion_aulica/GUI/QML"
silent_level = 1
